Changelog
=========

1.1  Unreleased
---------------

- Fixing erroneous (duplicate) translation ID. This fixes
  http://dev.plone.org/plone/ticket/7764
  [limi]


1.0.2  March 7, 2008
----------------------

- Correct the title of the portlet type to read 'OpenID Login' instead of
  just 'Login'.
  [wichert]


1.0.1  August 17, 2007
----------------------

- Remove use of javascript in login portlet
  [ree]


1.0  August 15, 2007
--------------------

- First stable release.
  [wichert]
