@@ -1,10 +1,14 @@
 <?xml version="1.0"?>
-<portlets>
+<portlets
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="plone">
 
  <portlet 
    addview="portlets.OpenIDLogin"
    title="OpenID Login"
    description="A portlet which can render an OpenID log-in box"
+   i18n:attributes="title title_openid_portlet;
+                    description description_openid_portlet"
    for="plone.app.portlets.interfaces.IColumn"
    />
 
