@@ -4,7 +4,10 @@ Changelog
 1.1  Unreleased
 ---------------
 
-- Fixing erroneous (duplicate) translation ID. This fixes
+- Added missing i18n markup to portlets.xml.
+  [hannosch]
+
+- Fixed erroneous (duplicate) translation ID. This fixes
   http://dev.plone.org/plone/ticket/7764
   [limi]
 
